--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.3",
+    "@angular/animations": "^8.0.3",
+    "@angular/cdk": "^8.0.1",
     "@angular/common": "~8.0.3",
     "@angular/compiler": "~8.0.3",
     "@angular/core": "~8.0.3",
     "@angular/forms": "~8.0.3",
+    "@angular/material": "^8.0.1",
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
     "angularx-social-login": "^1.2.7",
     "bootstrap": "^4.3.1",
     "rxjs": "~6.4.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^8.13.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
