--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "~8.0.3",
     "angularx-social-login": "^1.2.7",
     "bootstrap": "^4.3.1",
+    "gijgo-angular-wrappers": "^1.9.13",
     "rxjs": "~6.4.0",
+    "saucelabs": "^2.1.9",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^8.13.0",
     "tslib": "^1.9.0",
