--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.0.3",
     "angularx-social-login": "^1.2.7",
     "bootstrap": "^4.3.1",
+    "buffer": "^5.2.1",
     "gijgo-angular-wrappers": "^1.9.13",
     "rxjs": "~6.4.0",
     "saucelabs": "^2.1.9",
