guest login with link and ckeditor impelement in thankyou message

--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
+    "@ckeditor/ckeditor5-angular": "^1.1.0",
+    "@ckeditor/ckeditor5-build-classic": "^12.3.1",
     "angularx-social-login": "^1.2.7",
     "bootstrap": "^4.3.1",
     "buffer": "^5.2.1",
     "gijgo-angular-wrappers": "^1.9.13",
+    "ngx-ckeditor": "^8.0.0",
     "rxjs": "~6.4.0",
     "saucelabs": "^2.1.9",
     "sweetalert": "^2.1.2",
