--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
     "@ckeditor/ckeditor5-angular": "^1.1.0",
+    "@ckeditor/ckeditor5-build-balloon": "^12.3.1",
     "@ckeditor/ckeditor5-build-classic": "^12.3.1",
     "angularx-social-login": "^1.2.7",
     "bootstrap": "^4.3.1",
