--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "angularx-social-login": "^1.2.7",
     "bootstrap": "^4.3.1",
     "buffer": "^5.2.1",
+    "chart.js": "^2.8.0",
     "gijgo-angular-wrappers": "^1.9.13",
+    "ng2-charts": "^2.3.0",
     "ngx-ckeditor": "^8.0.0",
     "rxjs": "~6.4.0",
     "saucelabs": "^2.1.9",
