--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gijgo-angular-wrappers": "^1.9.13",
     "ng2-charts": "^2.3.0",
     "ngx-ckeditor": "^8.0.0",
+    "ngx-clipboard": "^12.2.0",
     "rxjs": "~6.4.0",
     "saucelabs": "^2.1.9",
     "sweetalert": "^2.1.2",
