hotmail login done

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
+    "@auth0/auth0-spa-js": "^1.1.0",
+    "@azure/msal-angular": "^0.1.2",
     "@ckeditor/ckeditor5-angular": "^1.1.0",
     "@ckeditor/ckeditor5-build-balloon": "^12.3.1",
     "@ckeditor/ckeditor5-build-classic": "^12.3.1",
@@ -29,6 +31,7 @@
     "buffer": "^5.2.1",
     "chart.js": "^2.8.0",
     "gijgo-angular-wrappers": "^1.9.13",
+    "msal": "^1.0.2",
     "ng2-charts": "^2.3.0",
     "ngx-ckeditor": "^8.0.0",
     "ngx-clipboard": "^12.2.0",
