--- a/package.json
+++ b/package.json
@@ -23,21 +23,16 @@
     "@angular/router": "~8.0.3",
     "@auth0/auth0-spa-js": "^1.1.0",
     "@azure/msal-angular": "^0.1.2",
-    "@ckeditor/ckeditor5-angular": "^1.1.0",
-    "@ckeditor/ckeditor5-build-balloon": "^12.3.1",
-    "@ckeditor/ckeditor5-build-classic": "^12.3.1",
     "angularx-social-login": "^1.2.7",
     "bootstrap": "^4.3.1",
     "buffer": "^5.2.1",
-    "chart.js": "^2.8.0",
+    "firebase": "^6.3.3",
     "gijgo-angular-wrappers": "^1.9.13",
     "msal": "^1.0.2",
-    "ng2-charts": "^2.3.0",
     "ngx-ckeditor": "^8.0.0",
     "ngx-clipboard": "^12.2.0",
     "rxjs": "~6.4.0",
     "saucelabs": "^2.1.9",
-    "sweetalert": "^2.1.2",
     "sweetalert2": "^8.13.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
