--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.0.3",
     "@auth0/auth0-spa-js": "^1.1.0",
     "@azure/msal-angular": "^0.1.2",
+    "@types/jquery": "^3.3.30",
     "angularx-social-login": "^1.2.7",
     "bootstrap": "^4.3.1",
     "buffer": "^5.2.1",
