--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.0.3",
-    "@angular/cdk": "^8.0.1",
+    "@angular/cdk": "^8.1.2",
     "@angular/common": "~8.0.3",
     "@angular/compiler": "~8.0.3",
     "@angular/core": "~8.0.3",
@@ -23,12 +23,19 @@
     "@angular/router": "~8.0.3",
     "@auth0/auth0-spa-js": "^1.1.0",
     "@azure/msal-angular": "^0.1.2",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/free-brands-svg-icons": "^5.10.1",
+    "@fortawesome/free-solid-svg-icons": "^5.10.1",
+    "@ngx-share/button": "^7.1.2",
+    "@ngx-share/core": "^7.1.2",
     "@types/jquery": "^3.3.30",
     "angularx-social-login": "^1.2.7",
     "bootstrap": "^4.3.1",
     "buffer": "^5.2.1",
     "firebase": "^6.3.3",
     "gijgo-angular-wrappers": "^1.9.13",
+    "jw-angular-social-buttons": "^1.0.0",
     "msal": "^1.0.2",
     "ngx-ckeditor": "^8.0.0",
     "ngx-clipboard": "^12.2.0",
