--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "firebase": "^6.3.3",
     "gijgo-angular-wrappers": "^1.9.13",
     "jw-angular-social-buttons": "^1.0.0",
+    "loadjs": "^3.6.1",
     "msal": "^1.0.2",
     "ngx-ckeditor": "^8.0.0",
     "ngx-clipboard": "^12.2.0",
@@ -50,9 +51,9 @@
     "@angular/cli": "~8.0.6",
     "@angular/compiler-cli": "~8.0.3",
     "@angular/language-service": "~8.0.3",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^8.9.5",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
