--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.21",
     "@fortawesome/free-brands-svg-icons": "^5.10.1",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "@ngx-share/button": "^7.1.2",
     "@ngx-share/core": "^7.1.2",
     "@types/jquery": "^3.3.30",
